[package]
name = "core_raft"
version = "0.1.0"
edition = "2024"

[profile.release]
debug = true


[dependencies]
#openraft = { version = "0.9.21", features = ["type-alias"] }
openraft = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13", features = ["type-alias", "serde"] }
openraft-multi = { git = "https://github.com/databendlabs/openraft", tag = "v0.10.0-alpha.13" }
futures = "0.3.31"
tracing = "0.1.44"
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full", "tracing", "rt", "rt-multi-thread", "macros"] }
tokio-util = { version = "0.7.18", features = ["codec"] }
bincode2 = "2.0.1"
bytes = "1.11.0"
moka = { version = "0.12.12", features = ["sync", "future"] }
async-trait = "0.1.89"

tempfile = "3.24.0"
flamegraph = "0.6.11"
dashmap = "6.1.0"

mimalloc = "0.1.48"
anyhow = { version = "1.0.102" }
crossbeam-utils = "0.8.21"
parking_lot = "0.12.5"
lru = "0.16.3"
raft-engine = { git = "https://github.com/nasuiyile/raft-engine-serde" }
serde_yaml = "0.9.33"
tracing-subscriber = { version = "0.3.22", features = ["env-filter", "fmt"] }
console-subscriber = { version = "0.5", optional = true }
tracing-flame = { version = "0.2", optional = true }
uuid = { version = "1.19.0", features = ["v4", "serde"] }
thiserror = "2.0.18"

[features]
tokio-console = ["console-subscriber"]
flamegraph = ["tracing-flame"]